Use resource type name as resource '_type' selector

--- a/hyperapp/resource/live_list_service.yaml
+++ b/hyperapp/resource/live_list_service.yaml
@@ -7,5 +7,4 @@ import:
 provide:
   - resource.live_list_service
 require:
-  - resource_type_factory
-  - resource_type_reg
+  - python_object_creg
