--- a/hyperapp/resource/test/test_resources/test_resources.resources.yaml
+++ b/hyperapp/resource/test/test_resources/test_resources.resources.yaml
@@ -5,17 +5,21 @@ import:
   - legacy_service.peer_registry
   - legacy_service.rpc_call_factory
   - legacy_service.server_identity
+  - legacy_type.attribute.attribute
+  - legacy_type.partial.partial
+  - legacy_type.call.call
+  - legacy_type.resource_service.list_service
   - legacy_type.test_resources.test_d
 
 definitions:
 
   sample_servant_factory:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: legacy_module.server.htest_sample
     attr_name: sample_servant
 
   sample_servant_partial:
-    type: partial
+    _type: legacy_type.partial.partial
     function: sample_servant_factory
     params:
       mosaic: legacy_service.mosaic
@@ -24,20 +28,20 @@ definitions:
       rpc_call_factory: legacy_service.rpc_call_factory
 
   sample_servant:
-    type: call
+    _type: legacy_type.call.call
     function: sample_servant_partial
 
   servant_list:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: sample_servant
     attr_name: list
 
   test_d:
-    type: call
+    _type: legacy_type.call.call
     function: legacy_type.test_resources.test_d
 
   sample_list_service:
-    type: list_service
+    _type: legacy_type.resource_service.list_service
     identity: legacy_service.server_identity
     function: servant_list
     dir: test_d
