--- a/hyperapp/server/htest_module_list.resources.yaml
+++ b/hyperapp/server/htest_module_list.resources.yaml
@@ -6,6 +6,13 @@ import:
   - legacy_service.rpc_call_factory
   - legacy_service.server_identity
   - legacy_service.server_rpc_endpoint
+  - legacy_type.attribute.attribute
+  - legacy_type.partial.partial
+  - legacy_type.call.call
+  - legacy_type.resource_selector.selector
+  - legacy_type.resource_rpc_command.rpc_command
+  - legacy_type.resource_rpc_callback.rpc_callback
+  - legacy_type.resource_service.live_list_service
   - legacy_type.htest.htest_module_list_d
   - server.htest.htest
   - server.htest.htest_list
@@ -14,12 +21,12 @@ import:
 definitions:
 
   servant_ctr:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: legacy_module.server.htest_module_list
     attr_name: TestModuleListServant
 
   servant_factory:
-    type: partial
+    _type: legacy_type.partial.partial
     function: servant_ctr
     params:
       mosaic: legacy_service.mosaic
@@ -32,107 +39,107 @@ definitions:
       htest_list: server.htest.htest_list
 
   servant:
-    type: call
+    _type: legacy_type.call.call
     function: servant_factory
 
   servant_list_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: servant
     attr_name: list
 
   servant_module_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: servant
     attr_name: module
 
   servant_select_module_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: servant
     attr_name: select_module
 
   servant_set_module_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: servant
     attr_name: set_module
 
   servant_collect_globals_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: servant
     attr_name: collect_globals
 
   servant_construct_resources_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: servant
     attr_name: construct_resources
 
   set_module_function:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: legacy_module.server.htest_module_list
     attr_name: set_module
 
   set_module_partial:
-    type: partial
+    _type: legacy_type.partial.partial
     function: set_module_function
     params:
       htest_list: server.htest.htest_list
       service: service
 
   rpc_callback:
-    type: rpc_callback
+    _type: legacy_type.resource_rpc_callback.rpc_callback
     identity: legacy_service.server_identity
     function: set_module_partial
     item_attributes: ['module_name', 'module_ref']
 
   module_selector:
-    type: selector
+    _type: legacy_type.resource_selector.selector
     list_service: server.module_list.available_module_list_service
     callback: rpc_callback
 
   module_command:
-    type: rpc_command
+    _type: legacy_type.resource_rpc_command.rpc_command
     identity: legacy_service.server_identity
     function: servant_module_method
     state_attributes: ['current_key']
     name: module
 
   select_module_function:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: legacy_module.server.htest_module_list
     attr_name: select_module
 
   select_module_partial:
-    type: partial
+    _type: legacy_type.partial.partial
     function: select_module_function
     params:
       module_selector: module_selector
 
   select_module_command:
-    type: rpc_command
+    _type: legacy_type.resource_rpc_command.rpc_command
     identity: legacy_service.server_identity
     function: select_module_partial
     state_attributes: []
     name: select_module
 
   collect_globals_command:
-    type: rpc_command
+    _type: legacy_type.resource_rpc_command.rpc_command
     identity: legacy_service.server_identity
     function: servant_collect_globals_method
     state_attributes: ['current_key']
     name: collect_globals
 
   construct_resources_command:
-    type: rpc_command
+    _type: legacy_type.resource_rpc_command.rpc_command
     identity: legacy_service.server_identity
     function: servant_construct_resources_method
     state_attributes: ['current_key']
     name: construct_resources
 
   htest_module_list_d:
-    type: call
+    _type: legacy_type.call.call
     function: legacy_type.htest.htest_module_list_d
 
   service:
-    type: live_list_service
+    _type: legacy_type.resource_service.live_list_service
     identity: legacy_service.server_identity
     function: servant_list_method
     dir: htest_module_list_d
