--- a/hyperapp/server/sample_tree.resources.yaml
+++ b/hyperapp/server/sample_tree.resources.yaml
@@ -1,70 +1,76 @@
 import:
   - legacy_module.server.sample_tree
   - legacy_service.server_identity
+  - legacy_type.attribute.attribute
+  - legacy_type.partial.partial
+  - legacy_type.call.call
+  - legacy_type.map_service.map_service
+  - legacy_type.resource_rpc_command.rpc_command
+  - legacy_type.resource_service.tree_service
   - legacy_type.sample_tree.sample_tree_d
 
 definitions:
 
   tree_servant_factory:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: legacy_module.server.sample_tree
     attr_name: TreeServant
 
   tree_servant:
-    type: call
+    _type: legacy_type.call.call
     function: tree_servant_factory
 
   tree_servant_get_items_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: tree_servant
     attr_name: get_items
 
   tree_servant_raw_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: tree_servant
     attr_name: raw
 
   tree_servant_describe_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: tree_servant
     attr_name: describe
 
   tree_servant_open_method:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: tree_servant
     attr_name: open
 
   tree_servant_open_method_mapped:
-    type: map_service
+    _type: legacy_type.map_service.map_service
     function: tree_servant_open_method
 
   raw_command:
-    type: rpc_command
+    _type: legacy_type.resource_rpc_command.rpc_command
     identity: legacy_service.server_identity
     function: tree_servant_raw_method
     state_attributes: ['current_key']
     name: raw
 
   describe_command:
-    type: rpc_command
+    _type: legacy_type.resource_rpc_command.rpc_command
     identity: legacy_service.server_identity
     function: tree_servant_describe_method
     state_attributes: ['current_key']
     name: describe
 
   open_command:
-    type: rpc_command
+    _type: legacy_type.resource_rpc_command.rpc_command
     identity: legacy_service.server_identity
     function: tree_servant_open_method_mapped
     state_attributes: ['current_key']
     name: open
 
   sample_tree_d:
-    type: call
+    _type: legacy_type.call.call
     function: legacy_type.sample_tree.sample_tree_d
 
   sample_tree_service:
-    type: tree_service
+    _type: legacy_type.resource_service.tree_service
     identity: legacy_service.server_identity
     function: tree_servant_get_items_method
     dir: sample_tree_d
