--- a/hyperapp/server/test/test_resources/reference.resources.yaml
+++ b/hyperapp/server/test/test_resources/reference.resources.yaml
@@ -1,19 +1,22 @@
 import:
-- legacy_module.construct_resources_sample
-- legacy_service.mosaic
-- legacy_service.peer_registry
-- legacy_service.rpc_call_factory
-- legacy_service.web
+  - legacy_module.construct_resources_sample
+  - legacy_service.mosaic
+  - legacy_service.peer_registry
+  - legacy_service.rpc_call_factory
+  - legacy_service.web
+  - legacy_type.attribute.attribute
+  - legacy_type.partial.partial
+  - legacy_type.call.call
 definitions:
   sample_servant:
-    type: call
+    _type: legacy_type.call.call
     function: sample_servant_attribute_partial
   sample_servant_attribute:
-    type: attribute
+    _type: legacy_type.attribute.attribute
     object: legacy_module.construct_resources_sample
     attr_name: SampleServant
   sample_servant_attribute_partial:
-    type: partial
+    _type: legacy_type.partial.partial
     function: sample_servant_attribute
     params:
       mosaic: legacy_service.mosaic
