Resource constructor: retrieve 'get' method result t

--- a/hyperapp/resource_ctr/global.resources.yaml
+++ b/hyperapp/resource_ctr/global.resources.yaml
@@ -20,6 +20,10 @@ definitions:
     _type: legacy_type.piece_ref.piece_ref
     value: server.htest_runner.get_function_result_type
 
+  runner_method_get_function_result_type_ref:
+    _type: legacy_type.piece_ref.piece_ref
+    value: server.htest_runner.get_function_result_type
+
   construct_global_attribute:
     _type: legacy_type.attribute.attribute
     object: legacy_module.resource_ctr.global
@@ -34,3 +38,4 @@ definitions:
       resource_module_registry: legacy_service.resource_module_registry
       fixture_resource_module_registry: legacy_service.fixture_resource_module_registry
       runner_method_collect_attributes_ref: runner_method_collect_attributes_ref
+      runner_method_get_function_result_type_ref: runner_method_get_function_result_type_ref
