--- a/hyperapp/server/test/test_resources/construct_resources_sample.expected.yaml
+++ b/hyperapp/server/test/test_resources/construct_resources_sample.expected.yaml
@@ -16,6 +16,10 @@ definitions:
     _type: legacy_type.attribute.attribute
     object: legacy_module.construct_resources_sample
     attr_name: SampleServant
+  sample_servant_get_attribute:
+    _type: legacy_type.attribute.attribute
+    object: sample_servant
+    attr_name: get
   sample_servant_partial:
     _type: legacy_type.partial.partial
     function: sample_servant_attribute
