--- a/hyperapp/resource_ctr/global.yaml
+++ b/hyperapp/resource_ctr/global.yaml
@@ -7,6 +7,8 @@ import:
     call:
       - call
     htest:
+      - record_t
       - list_t
     impl:
       - list_impl
+      - impl_association
