--- a/hyperapp/server/test/test_resources/construct_resources_sample.expected.yaml
+++ b/hyperapp/server/test/test_resources/construct_resources_sample.expected.yaml
@@ -6,7 +6,9 @@ import:
 - legacy_service.web
 - legacy_type.attribute.attribute
 - legacy_type.builtin.int
+- legacy_type.call.call
 - legacy_type.construct_resources_sample.sample
+- legacy_type.construct_resources_sample.sample_servant_d
 - legacy_type.impl.impl_association
 - legacy_type.impl.list_impl
 - legacy_type.partial.partial
@@ -19,10 +21,15 @@ definitions:
     _type: legacy_type.attribute.attribute
     object: legacy_module.construct_resources_sample
     attr_name: SampleServant
+  sample_servant_d:
+    _type: legacy_type.call.call
+    function: legacy_type.construct_resources_sample.sample_servant_d
   sample_servant_impl:
     _type: legacy_type.impl.list_impl
     function: sample_servant_partial
+    key_attribute: key
     key_t: legacy_type.builtin.int
+    dir: sample_servant_d
   sample_servant_partial:
     _type: legacy_type.partial.partial
     function: sample_servant_attribute
