Refactor layered config sheet; rename module to lcs

--- a/hyperapp/common/lcs.yaml
+++ b/hyperapp/common/lcs.yaml
@@ -1,8 +1,9 @@
 import:
   types:
-    layered_config_sheet:
-      - lcs_storage
+    lcs:
+      - storage
       - lcs_association
+      - lcs_set_association
   code:
     - async.ui.module
 require:
